updated po files

--- a/culturefeed_agenda/translations/culturefeed_agenda.nl.po
+++ b/culturefeed_agenda/translations/culturefeed_agenda.nl.po
@@ -22,30 +22,30 @@
 #  theme/culturefeed-agenda-production-program.tpl.php: n/a
 #  theme/theme.inc: n/a
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2013-07-23 13:53+0200\n"
-"PO-Revision-Date: 2013-07-23 13:53+0200\n"
-"Last-Translator: NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-07-23 14:34+0100\n"
+"Last-Translator: Frontend CultuurNet <frontend@cultuurnet.be>\n"
 "Language-Team: Dutch <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"X-Generator: Poedit 1.5.7\n"
 
 #: culturefeed_agenda.module:129 includes/blocks.inc:315
 msgid "Agenda"
-msgstr ""
+msgstr "Agenda"
 
 #: culturefeed_agenda.module:130
 msgid "Activities"
-msgstr ""
+msgstr "Activiteiten"
 
 #: culturefeed_agenda.module:133
 msgid "Relevance"
-msgstr ""
+msgstr "Relevantie"
 
 #: culturefeed_agenda.module:134
 msgid "Date"
@@ -53,11 +53,12 @@ msgstr "Datum"
 
 #: culturefeed_agenda.module:135
 msgid "Recommended"
-msgstr ""
+msgstr "Aantal keer aangeraden"
 
-#: culturefeed_agenda.module:136 theme/culturefeed-event.tpl.php:12 theme/culturefeed-production.tpl.php:12
+#: culturefeed_agenda.module:136 theme/culturefeed-event.tpl.php:12
+#: theme/culturefeed-production.tpl.php:12
 msgid "Reactions"
-msgstr ""
+msgstr "Aantal reacties"
 
 #: culturefeed_agenda.module:152
 msgid "Culturefeed agenda: related activities"
@@ -84,7 +85,9 @@ msgid "Category type to search related events"
 msgstr ""
 
 #: culturefeed_agenda.module:191
-msgid "The category type to use for searching related activities. Leave empty if you only want to search on range."
+msgid ""
+"The category type to use for searching related activities. Leave empty if "
+"you only want to search on range."
 msgstr ""
 
 #: culturefeed_agenda.module:195
@@ -92,7 +95,9 @@ msgid "Radius to search in km"
 msgstr ""
 
 #: culturefeed_agenda.module:198
-msgid "Search on the given radius. Leave empty to skip radius search. Radius search will only be done when viewing an event."
+msgid ""
+"Search on the given radius. Leave empty to skip radius search. Radius search "
+"will only be done when viewing an event."
 msgstr ""
 
 #: culturefeed_agenda.module:202
@@ -149,11 +154,11 @@ msgstr ""
 
 #: includes/blocks.inc:104
 msgid "Related activities"
-msgstr ""
+msgstr "Gerelateerde activiteiten"
 
 #: includes/blocks.inc:128
 msgid "All categories"
-msgstr ""
+msgstr "Alle categorieën"
 
 #: includes/blocks.inc:146
 msgid "Search string"
@@ -161,7 +166,7 @@ msgstr ""
 
 #: includes/blocks.inc:154
 msgid "Activities near my current location:"
-msgstr ""
+msgstr "Activiteiten in de buurt van mijn huidige locatie:"
 
 #: includes/blocks.inc:172
 msgid "Search"
@@ -173,19 +178,28 @@ msgstr "Home"
 
 #: lib/Drupal/AgendaSearchPage.php:139
 msgid "All activities"
-msgstr ""
+msgstr "Alle activiteiten"
 
-#: theme/culturefeed-actor-short-summary.tpl.php:17 theme/culturefeed-actor-summary.tpl.php:17 theme/culturefeed-event-short-summary.tpl.php:21 theme/culturefeed-event-summary.tpl.php:67 theme/culturefeed-production-short-summary.tpl.php:21 theme/culturefeed-production-summary.tpl.php:65
+#: theme/culturefeed-actor-short-summary.tpl.php:17
+#: theme/culturefeed-actor-summary.tpl.php:17
+#: theme/culturefeed-event-short-summary.tpl.php:21
+#: theme/culturefeed-event-summary.tpl.php:67
+#: theme/culturefeed-production-short-summary.tpl.php:21
+#: theme/culturefeed-production-summary.tpl.php:65
 msgid "More info"
-msgstr ""
+msgstr "Meer info"
 
 #: theme/culturefeed-actor.tpl.php:14
 msgid "Summarized"
-msgstr ""
+msgstr "Samengevat"
 
-#: theme/culturefeed-actor.tpl.php:19 theme/culturefeed-event-summary.tpl.php:39 theme/culturefeed-event.tpl.php:31 theme/culturefeed-production-summary.tpl.php:42 theme/culturefeed-production.tpl.php:31
+#: theme/culturefeed-actor.tpl.php:19
+#: theme/culturefeed-event-summary.tpl.php:39
+#: theme/culturefeed-event.tpl.php:31
+#: theme/culturefeed-production-summary.tpl.php:42
+#: theme/culturefeed-production.tpl.php:31
 msgid "Where"
-msgstr ""
+msgstr "Waar"
 
 #: theme/culturefeed-actor.tpl.php:34 theme/culturefeed-event.tpl.php:62
 msgid "Contact"
@@ -193,23 +207,24 @@ msgstr "Contact"
 
 #: theme/culturefeed-actor.tpl.php:37 theme/culturefeed-event.tpl.php:65
 msgid "Mail"
-msgstr ""
+msgstr "Mail"
 
 #: theme/culturefeed-actor.tpl.php:40 theme/culturefeed-event.tpl.php:68
 msgid "Phone"
-msgstr ""
+msgstr "Telefoon"
 
 #: theme/culturefeed-actor.tpl.php:43 theme/culturefeed-event.tpl.php:71
 msgid "Fax"
-msgstr ""
+msgstr "Fax"
 
-#: theme/culturefeed-actor.tpl.php:49 theme/culturefeed-event.tpl.php:98 theme/culturefeed-production.tpl.php:75
+#: theme/culturefeed-actor.tpl.php:49 theme/culturefeed-event.tpl.php:98
+#: theme/culturefeed-production.tpl.php:75
 msgid "Links"
-msgstr ""
+msgstr "Links"
 
 #: theme/culturefeed-agenda-actor-program-item.tpl.php:22
 msgid "More details"
-msgstr ""
+msgstr "Meer details"
 
 #: theme/culturefeed-agenda-actor-program.tpl.php:14
 msgid "More"
@@ -217,81 +232,97 @@ msgstr "Meer"
 
 #: theme/culturefeed-agenda-production-program.tpl.php:18
 msgid "Show all"
-msgstr ""
+msgstr "Toon alle"
 
-#: theme/culturefeed-event-summary.tpl.php:16 theme/culturefeed-event.tpl.php:15 theme/culturefeed-production-summary.tpl.php:16 theme/culturefeed-production.tpl.php:15
+#: theme/culturefeed-event-summary.tpl.php:16
+#: theme/culturefeed-event.tpl.php:15
+#: theme/culturefeed-production-summary.tpl.php:16
+#: theme/culturefeed-production.tpl.php:15
 msgid "Read reactions"
-msgstr ""
+msgstr "Lees reacties"
 
-#: theme/culturefeed-event-summary.tpl.php:17 theme/culturefeed-event.tpl.php:16 theme/culturefeed-production-summary.tpl.php:17 theme/culturefeed-production.tpl.php:16
+#: theme/culturefeed-event-summary.tpl.php:17
+#: theme/culturefeed-event.tpl.php:16
+#: theme/culturefeed-production-summary.tpl.php:17
+#: theme/culturefeed-production.tpl.php:16
 msgid "Write reaction"
-msgstr ""
+msgstr "Schrijf een reactie"
 
-#: theme/culturefeed-event-summary.tpl.php:20 theme/culturefeed-event.tpl.php:19 theme/culturefeed-production-summary.tpl.php:20 theme/culturefeed-production.tpl.php:19
+#: theme/culturefeed-event-summary.tpl.php:20
+#: theme/culturefeed-event.tpl.php:19
+#: theme/culturefeed-production-summary.tpl.php:20
+#: theme/culturefeed-production.tpl.php:19
 msgid "Be the first to write a review"
-msgstr ""
+msgstr "Schrijf als eerste een reactie"
 
-#: theme/culturefeed-event-summary.tpl.php:24 theme/culturefeed-production-summary.tpl.php:24
+#: theme/culturefeed-event-summary.tpl.php:24
+#: theme/culturefeed-production-summary.tpl.php:24
 msgid "time recommended"
-msgstr ""
+msgstr "keer aangeraden"
 
-#: theme/culturefeed-event-summary.tpl.php:44 theme/culturefeed-event.tpl.php:46 theme/culturefeed-production-summary.tpl.php:47 theme/culturefeed-production.tpl.php:48
+#: theme/culturefeed-event-summary.tpl.php:44
+#: theme/culturefeed-event.tpl.php:46
+#: theme/culturefeed-production-summary.tpl.php:47
+#: theme/culturefeed-production.tpl.php:48
 msgid "When"
-msgstr ""
+msgstr "Wanneer"
 
-#: theme/culturefeed-event-summary.tpl.php:49 theme/culturefeed-event.tpl.php:51 theme/culturefeed-production.tpl.php:53
+#: theme/culturefeed-event-summary.tpl.php:49
+#: theme/culturefeed-event.tpl.php:51 theme/culturefeed-production.tpl.php:53
 msgid "Organization"
-msgstr ""
+msgstr "Organisatie"
 
-#: theme/culturefeed-event-summary.tpl.php:56 theme/culturefeed-event.tpl.php:23;82 theme/culturefeed-production-summary.tpl.php:54 theme/culturefeed-production.tpl.php:23;64
+#: theme/culturefeed-event-summary.tpl.php:56
+#: theme/culturefeed-event.tpl.php:23;82
+#: theme/culturefeed-production-summary.tpl.php:54
+#: theme/culturefeed-production.tpl.php:23;64
 msgid "Theme"
-msgstr ""
+msgstr "Thema"
 
 #: theme/culturefeed-event.tpl.php:26 theme/culturefeed-production.tpl.php:26
 msgid "Short description"
-msgstr ""
+msgstr "Korte omschrijving"
 
 #: theme/culturefeed-event.tpl.php:77
 msgid "Age"
-msgstr ""
+msgstr "Leeftijd"
 
 #: theme/culturefeed-event.tpl.php:93
 msgid "Price"
-msgstr ""
+msgstr "Prijs"
 
 #: theme/culturefeed-production-summary.tpl.php:28
 msgid "attendee"
-msgstr ""
+msgstr "persoon gaat"
 
 #: theme/culturefeed-production-summary.tpl.php:28
 msgid "attendees"
-msgstr ""
+msgstr "personen gaan"
 
 #: theme/theme.inc:127
 msgid "free"
-msgstr ""
+msgstr "gratis"
 
 #: theme/theme.inc:135
 msgid "Buy tickets"
-msgstr ""
+msgstr "Bestel tickets"
 
 #: theme/theme.inc:357
 msgid "multiple locations"
-msgstr ""
+msgstr "meerdere locaties"
 
 #: theme/theme.inc:358
 msgid "multiple dates"
-msgstr ""
+msgstr "meerdere data"
 
 #: theme/theme.inc:392
 msgid "on displacement in"
-msgstr ""
+msgstr "op verplaatsing in"
 
 #: theme/theme.inc:398
 msgid "by appointment only"
-msgstr ""
+msgstr "Enkel op afspraak"
 
 #: theme/theme.inc:503
 msgid "Other"
-msgstr ""
-
+msgstr "Andere"
