--- a/culturefeed_ui/translations/culturefeed_ui.nl.po
+++ b/culturefeed_ui/translations/culturefeed_ui.nl.po
@@ -23,8 +23,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2013-07-23 11:19+0200\n"
-"PO-Revision-Date: 2013-07-23 11:21+0100\n"
-"Last-Translator: Cultuurnet Frontend <frontend@cultuurnet.be>\n"
+"PO-Revision-Date: 2013-07-23 14:04+0100\n"
+"Last-Translator: Frontend CultuurNet <frontend@cultuurnet.be>\n"
 "Language-Team: Dutch <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -34,71 +34,74 @@ msgstr ""
 
 #: culturefeed-ui-connect-hover.tpl.php:2
 msgid "To continue you have to be logged on with your UiTiD."
-msgstr ""
+msgstr "Om verder te gaan moet je aangemeld zijn met je UiTiD."
 
 #: culturefeed-ui-connect-hover.tpl.php:4 culturefeed-ui-connect.tpl.php:13
 #: culturefeed-ui-something-for-you.tpl.php:3
 msgid "Or via"
-msgstr ""
+msgstr "Of via"
 
 #: culturefeed-ui-connect-hover.tpl.php:4 culturefeed-ui-connect.tpl.php:13
 #: culturefeed-ui-something-for-you.tpl.php:3
 msgid "or"
-msgstr ""
+msgstr "of"
 
 #: culturefeed-ui-connect.tpl.php:2
 msgid "Choosing your events will be simplified"
-msgstr ""
+msgstr "Kiezen wordt makkelijker"
 
 #: culturefeed-ui-connect.tpl.php:3
 msgid "thanks to UiTiD"
-msgstr ""
+msgstr "dankzij UiTID"
 
 #: culturefeed-ui-connect.tpl.php:5
 msgid "Create an UiTiD account and:"
-msgstr ""
+msgstr "Maak een UiTiD aan en:"
 
 #: culturefeed-ui-connect.tpl.php:7
 msgid "receive <strong>personal tips</strong> only for you"
-msgstr ""
+msgstr "ontvang <strong>persoonlijke tips</strong> op jouw maat"
 
 #: culturefeed-ui-connect.tpl.php:8
 msgid "discover what <string>your friends and similar users</strong> like"
 msgstr ""
+"ontdek wat <strong>vrienden en gelijkaardige gebruikers</strong> leuk vinden"
 
 #: culturefeed-ui-mbox-confirmation-reminder.tpl.php:1
 msgid "Confirm you emailadress to use all UiTiD features"
-msgstr ""
+msgstr "Bevestig je e-mailadres om alle functies van UiTiD te gebruiken."
 
 #: culturefeed-ui-mbox-confirmation-reminder.tpl.php:3
 msgid "A confirmation email has been send to"
-msgstr ""
+msgstr "Een bevestigingsmail is verstuurd naar "
 
 #: culturefeed-ui-my-uitid.tpl.php:43
 msgid "Amount of actions"
-msgstr ""
+msgstr "Aantal acties"
 
 #: culturefeed-ui-my-uitid.tpl.php:45
 msgid ""
 "The more items you like or events you attend, the more tips will have a "
 "personal touch"
 msgstr ""
+"Hoe meer je laat weten of je een activiteit leuk vindt of naartoe gaat, hoe "
+"beter je persoonlijke tips zullen worden."
 
 #: culturefeed-ui-my-uitid.tpl.php:49
 msgid "likes"
-msgstr ""
+msgstr "vind ik leuk"
 
 #: culturefeed-ui-my-uitid.tpl.php:55
 msgid "attends"
-msgstr ""
+msgstr "ga ik naartoe"
 
 #: culturefeed-ui-my-uitid.tpl.php:72
 msgid "Pages where i'm member off:"
-msgstr ""
+msgstr "Pagina's waar ik lid van ben:"
 
 #: culturefeed-ui-online-account.tpl.php:8
 msgid "Connected with:"
-msgstr ""
+msgstr "Gekoppeld met:"
 
 #: culturefeed-ui-ranked-user-summary.tpl.php:8
 msgid "actions"
@@ -109,14 +112,16 @@ msgid ""
 "Create an UiTiD account, let us know what you like and receive more personal "
 "tips."
 msgstr ""
+"Maak een UiTiD aan, laat ons weten wat je leuk vindt en ontvang nog meer "
+"tips op jouw maat."
 
 #: culturefeed_ui.admin.inc:17
 msgid "Number of activities"
-msgstr ""
+msgstr "Aantal activiteiten"
 
 #: culturefeed_ui.admin.inc:18
 msgid "Number of likes"
-msgstr ""
+msgstr "Aantal vind-ik-leuk's"
 
 #: culturefeed_ui.admin.inc:19
 msgid "Number of Facebook shares"
@@ -124,11 +129,11 @@ msgstr ""
 
 #: culturefeed_ui.admin.inc:20
 msgid "Number of Twitter shares"
-msgstr ""
+msgstr "Aantal tweets"
 
 #: culturefeed_ui.admin.inc:21
 msgid "Number of attends"
-msgstr ""
+msgstr "Aantal ga-ik-naartoe's "
 
 #: culturefeed_ui.admin.inc:22
 msgid "Number of activities (aggregate)"
@@ -140,23 +145,23 @@ msgstr ""
 
 #: culturefeed_ui.blocks.inc:38
 msgid "Similar users"
-msgstr ""
+msgstr "Gelijkaardige gebruikers"
 
 #: culturefeed_ui.blocks.inc:68 culturefeed_ui.preprocess.inc:216
 msgid "Most active user"
-msgstr ""
+msgstr "UiTslover van de week"
 
 #: culturefeed_ui.blocks.inc:79
 msgid "Search users"
-msgstr ""
+msgstr "Gebruikers zoeken"
 
 #: culturefeed_ui.blocks.inc:94
 msgid "UiTiD connect"
-msgstr ""
+msgstr "Teveel te doen?"
 
 #: culturefeed_ui.blocks.inc:205
 msgid "Manage profile"
-msgstr ""
+msgstr "Beheer je profiel"
 
 #: culturefeed_ui.blocks.inc:260 culturefeed_ui.module:390
 msgid "My account"
@@ -164,7 +169,7 @@ msgstr "Mijn account"
 
 #: culturefeed_ui.blocks.inc:282
 msgid "Something for you?"
-msgstr ""
+msgstr "Echt iets voor jou?"
 
 #: culturefeed_ui.forms.inc:8
 msgid "Name"
@@ -184,47 +189,47 @@ msgstr "Verwijderen"
 
 #: culturefeed_ui.helpers.inc:88
 msgid "I accept that my UiTiD actions on "
-msgstr ""
+msgstr "Ik geef toestemming aan UiTiD om mijn acties op "
 
 #: culturefeed_ui.helpers.inc:88
 msgid " will be published automatically on "
-msgstr ""
+msgstr " automatisch te publiceren op "
 
 #: culturefeed_ui.helpers.inc:88
 msgid "User agreement"
-msgstr ""
+msgstr "Gebruiksvoorwaarden"
 
 #: culturefeed_ui.helpers.inc:94;157
 msgid "Public"
-msgstr ""
+msgstr "Publiek"
 
 #: culturefeed_ui.helpers.inc:94;157
 msgid "Private"
-msgstr ""
+msgstr "Privé"
 
 #: culturefeed_ui.helpers.inc:96;159
 msgid "Switch off"
-msgstr ""
+msgstr "Zet uit"
 
 #: culturefeed_ui.helpers.inc:96;159
 msgid "Switch on"
-msgstr ""
+msgstr "Zet aan"
 
 #: culturefeed_ui.helpers.inc:120
 msgid "Like"
-msgstr ""
+msgstr "Vind ik leuk"
 
 #: culturefeed_ui.helpers.inc:121
 msgid "Attend"
-msgstr ""
+msgstr "Ga hier naartoe"
 
 #: culturefeed_ui.helpers.inc:122
 msgid "Share on Facebook"
-msgstr ""
+msgstr "Gedeeld op Facebook"
 
 #: culturefeed_ui.helpers.inc:123
 msgid "Share on Twitter"
-msgstr ""
+msgstr "Gedeeld op Twitter"
 
 #: culturefeed_ui.helpers.inc:164
 msgid ""
@@ -232,11 +237,14 @@ msgid ""
 "\"tooltip-text\">All your UiTiD actions (likes, attends, shares) will be "
 "posted automatically to your Facebook timeline.</div>"
 msgstr ""
+"Publiceer mijn acties op Facebook <div class=\"tooltip\">?</div><div class="
+"\"tooltip-text\">Hiermee zullen je acties (vind ik leuk, ga ik naartoe,…), "
+"automatisch op je Facebook Timeline verschijnen.</div>"
 
 #: culturefeed_ui.helpers.inc:174
 #: culturefeed_ui.pages.inc:66;105;115;176;503;518;566;603;634;646;713
 msgid "Error occurred"
-msgstr ""
+msgstr "Er is een fout opgetreden."
 
 #: culturefeed_ui.helpers.inc:190
 msgid "Home"
@@ -244,11 +252,11 @@ msgstr "Home"
 
 #: culturefeed_ui.helpers.inc:198 culturefeed_ui.module:419
 msgid "My profile"
-msgstr ""
+msgstr "Mijn profiel"
 
 #: culturefeed_ui.pages.inc:5
 msgid "Sure you want to delete your account?"
-msgstr ""
+msgstr "Ben je zeker dat je jouw UiTiD wil verwijderen?"
 
 #: culturefeed_ui.pages.inc:7
 msgid "This action cannot be undone."
@@ -260,35 +268,35 @@ msgstr "Annuleren"
 
 #: culturefeed_ui.pages.inc:21
 msgid "An error occurred while deleting your account."
-msgstr ""
+msgstr "Er is een fout opgetreden bij het verwijderen van jouw account."
 
 #: culturefeed_ui.pages.inc:76
 msgid "No results found."
-msgstr ""
+msgstr "Geen resultaten gevonden."
 
 #: culturefeed_ui.pages.inc:124
 msgid "No users found"
-msgstr ""
+msgstr "Geen gebruikers gevonden."
 
 #: culturefeed_ui.pages.inc:145;155
 msgid "Error occurred, please try again later"
-msgstr ""
+msgstr "Er is een fout opgetreden. Probeer later opnieuw."
 
 #: culturefeed_ui.pages.inc:151
 msgid "Confirmation mail succesfully sended"
-msgstr ""
+msgstr "De bevestigingsmail werd met succes verzonden."
 
 #: culturefeed_ui.pages.inc:159
 msgid "Emailaddress from this account already confirmed."
-msgstr ""
+msgstr "Het e-mailadres verbonden aan deze account werd reeds bevestigd."
 
 #: culturefeed_ui.pages.inc:182;442
 msgid "See profile"
-msgstr ""
+msgstr "Bekijk profiel"
 
 #: culturefeed_ui.pages.inc:189
 msgid "Preferred language"
-msgstr ""
+msgstr "Voorkeur taal"
 
 #: culturefeed_ui.pages.inc:192
 msgid "Dutch"
@@ -308,75 +316,75 @@ msgstr "Duits"
 
 #: culturefeed_ui.pages.inc:202
 msgid "First name"
-msgstr ""
+msgstr "Voornaam"
 
 #: culturefeed_ui.pages.inc:207
 msgid "Hide 'first name' in public profile"
-msgstr ""
+msgstr "Verberg 'voornaam' in openbaar profiel"
 
 #: culturefeed_ui.pages.inc:214
 msgid "Family name"
-msgstr ""
+msgstr "Naam"
 
 #: culturefeed_ui.pages.inc:219
 msgid "Hide 'family name' in public profile"
-msgstr ""
+msgstr "Verberg 'naam' in openbaar profiel"
 
 #: culturefeed_ui.pages.inc:229
 msgid "Choose picture"
-msgstr ""
+msgstr "Kies een foto"
 
 #: culturefeed_ui.pages.inc:241 culturefeed_ui.preprocess.inc:30
 msgid "Male"
-msgstr ""
+msgstr "Man"
 
 #: culturefeed_ui.pages.inc:241 culturefeed_ui.preprocess.inc:30
 msgid "Female"
-msgstr ""
+msgstr "Vrouw"
 
 #: culturefeed_ui.pages.inc:246
 msgid "Hide 'gender' in public profile"
-msgstr ""
+msgstr "Verberg 'geslacht' in openbaar profiel"
 
 #: culturefeed_ui.pages.inc:253
 msgid "Street and number"
-msgstr ""
+msgstr "Straatnaam en nummer"
 
 #: culturefeed_ui.pages.inc:258
 msgid "Zipcode"
-msgstr ""
+msgstr "Postcode"
 
 #: culturefeed_ui.pages.inc:263
 msgid "City"
-msgstr ""
+msgstr "Woonplaats"
 
 #: culturefeed_ui.pages.inc:269
 msgid "Country"
-msgstr ""
+msgstr "Land"
 
 #: culturefeed_ui.pages.inc:274
 msgid "Hide 'address' in public profile"
-msgstr ""
+msgstr "Verberg 'woonplaats' in openbaar profiel"
 
 #: culturefeed_ui.pages.inc:280
 msgid "Date of birth"
-msgstr ""
+msgstr "Geboortedatum"
 
 #: culturefeed_ui.pages.inc:283
 msgid "Format : dd/mm/yyyy"
-msgstr ""
+msgstr "Formaat : dd/mm/jjjj"
 
 #: culturefeed_ui.pages.inc:288
 msgid "Hide 'date of birth' in public profile"
-msgstr ""
+msgstr "Verberg 'geboortedatum' in openbaar profiel"
 
 #: culturefeed_ui.pages.inc:295
 msgid "Biography"
-msgstr ""
+msgstr "Beschrijf jezelf"
 
 #: culturefeed_ui.pages.inc:300
 msgid "Hide 'biography' in public profile"
-msgstr ""
+msgstr "Verberg 'bio' in openbaar profiel"
 
 #: culturefeed_ui.pages.inc:306;462
 msgid "Save"
@@ -384,39 +392,42 @@ msgstr "Opslaan"
 
 #: culturefeed_ui.pages.inc:355
 msgid "Error occurred while saving your personal data."
-msgstr ""
+msgstr "Er is een fout opgetreden bij het bewaren van jouw gegevens."
 
 #: culturefeed_ui.pages.inc:372
 msgid "Error occurred while saving your picture."
-msgstr ""
+msgstr "Er is een fout opgetreden bij het opladen van jouw afbeelding."
 
 #: culturefeed_ui.pages.inc:394
 msgid "Error occurred while saving your privacy settings."
 msgstr ""
+"Er is een fout opgetreden bij het bewaren van jouw privacy instellingen."
 
 #: culturefeed_ui.pages.inc:401;499
 msgid "Changes succesfully saved."
-msgstr ""
+msgstr "Jouw wijzigingen werden bewaard."
 
 #: culturefeed_ui.pages.inc:413
 msgid "Connected accounts"
-msgstr ""
+msgstr "Gekoppelde accounts"
 
 #: culturefeed_ui.pages.inc:419
 msgid "Manage all "
-msgstr ""
+msgstr "Beheer alle"
 
 #: culturefeed_ui.pages.inc:419
 msgid "websites and applications"
-msgstr ""
+msgstr "websites en toepassingen"
 
 #: culturefeed_ui.pages.inc:419
 msgid " who uses your UiTiD profile."
-msgstr ""
+msgstr " die momenteel gebruik maken van je UiTiD."
 
 #: culturefeed_ui.pages.inc:436
 msgid "An error occurred while loading your account, please try again later."
 msgstr ""
+"Er is een fout opgetreden bij het laden van jouw account. Probeer het later "
+"opnieuw."
 
 #: culturefeed_ui.pages.inc:448
 msgid "Username"
@@ -424,35 +435,35 @@ msgstr "Gebruikersnaam"
 
 #: culturefeed_ui.pages.inc:455
 msgid "Emailaddress"
-msgstr ""
+msgstr "E-mailadres"
 
 #: culturefeed_ui.pages.inc:473
 msgid "Change password"
-msgstr ""
+msgstr "Paswoord wijzigen"
 
 #: culturefeed_ui.pages.inc:479
 msgid "Delete account"
-msgstr ""
+msgstr "Account verwijderen"
 
 #: culturefeed_ui.pages.inc:488
 msgid "Invalid email"
-msgstr ""
+msgstr "Ongeldig e-mailadres"
 
 #: culturefeed_ui.pages.inc:676
 msgid "No channels found."
-msgstr ""
+msgstr "Geen kanalen gevonden."
 
 #: culturefeed_ui.preprocess.inc:79
 msgid "Resend email confirmation"
-msgstr ""
+msgstr "E-mailbevestiging opnieuw versturen"
 
 #: culturefeed_ui.preprocess.inc:80
 msgid "Change emailaddress"
-msgstr ""
+msgstr "E-mailadres aanpassen"
 
 #: culturefeed_ui.preprocess.inc:81
 msgid "More info about UiTiD"
-msgstr ""
+msgstr "Meer info over UiTiD"
 
 #: culturefeed_ui.preprocess.inc:145
 msgid "Log in"
@@ -460,41 +471,43 @@ msgstr "Inloggen"
 
 #: culturefeed_ui.preprocess.inc:146
 msgid "Sign up"
-msgstr ""
+msgstr "Registreren"
 
 #: culturefeed_ui.preprocess.inc:193;208
 msgid "actions</strong> done"
-msgstr ""
+msgstr "acties</strong> gedaan"
 
 #: culturefeed_ui.preprocess.inc:196
 msgid "pages</strong> liked"
-msgstr ""
+msgstr "pagina's</strong> leuk gevonden"
 
 #: culturefeed_ui.preprocess.inc:199
 msgid "pagess</strong> shared on Facebook"
-msgstr ""
+msgstr "pagina's</strong> op Facebook gedeeld"
 
 #: culturefeed_ui.preprocess.inc:202
 msgid "pages</strong> shared on Twitter"
-msgstr ""
+msgstr "pagina's</strong> op Twitter gedeeld"
 
 #: culturefeed_ui.preprocess.inc:205
 msgid "events</strong> to attend"
-msgstr ""
+msgstr "activiteiten</strong> gemarkeerd bij te zullen wonen"
 
 #: culturefeed_ui.preprocess.inc:219
 msgid ""
 "!nick did <strong>!sort_value !type and is the !uitslover last week. "
 "Congratulations!"
 msgstr ""
+"!nick heeft de afgelopen week <strong>!sort_value !type en is de !uitslover "
+"van de week. Proficiat!"
 
 #: culturefeed_ui.preprocess.inc:234
 msgid "Connected on "
-msgstr ""
+msgstr "Gekoppeld op"
 
 #: culturefeed_ui.preprocess.inc:245 culturefeed_ui.module:396;428
 msgid "Edit profile"
-msgstr ""
+msgstr "Profiel bewerken"
 
 #: culturefeed_ui.preprocess.inc:246
 msgid "Manage actions"
@@ -502,39 +515,39 @@ msgstr "Acties beheren"
 
 #: culturefeed_ui.preprocess.inc:247 culturefeed_ui.module:402
 msgid "Edit account"
-msgstr ""
+msgstr "Account bewerken"
 
 #: culturefeed_ui.preprocess.inc:296
 msgid "Generate your leisure profile!"
-msgstr ""
+msgstr "Bereken je vrijetijdsprofiel"
 
 #: culturefeed_ui.preprocess.inc:302
 msgid "Action searcher"
-msgstr ""
+msgstr "Actiezoeker"
 
 #: culturefeed_ui.preprocess.inc:305
 msgid "Leisure searcher"
-msgstr ""
+msgstr "Actieve ontspanner"
 
 #: culturefeed_ui.preprocess.inc:308
 msgid "Discoverer"
-msgstr ""
+msgstr "Ontdekker"
 
 #: culturefeed_ui.preprocess.inc:311
 msgid "Connoisseur"
-msgstr ""
+msgstr "Fijnproever"
 
 #: culturefeed_ui.preprocess.inc:314
 msgid "Leisure profile not yet generated"
-msgstr ""
+msgstr "Profiel nog niet berekend"
 
 #: culturefeed_ui.preprocess.inc:317
 msgid "Regenerate"
-msgstr ""
+msgstr "Herbereken"
 
 #: culturefeed_ui.preprocess.inc:379
 msgid "your email"
-msgstr ""
+msgstr "je e-mailadres"
 
 #: culturefeed_ui.module:215
 msgid "Culturefeed ui: teaser (formerly connect)"
