--- a/culturefeed_mailing/translations/culturefeed_mailing.nl.po
+++ b/culturefeed_mailing/translations/culturefeed_mailing.nl.po
@@ -10,18 +10,18 @@
 #  culturefeed_mailing.module: n/a
 #  culturefeed_mailing.info: n/a
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "POT-Creation-Date: 2013-07-23 17:41+0200\n"
-"PO-Revision-Date: 2013-07-23 17:41+0200\n"
-"Last-Translator: NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-07-24 10:07+0100\n"
+"Last-Translator: Frontend CultuurNet <frontend@cultuurnet.be>\n"
 "Language-Team: Dutch <EMAIL@ADDRESS>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"X-Generator: Poedit 1.5.7\n"
 
 #: culturefeed_mailing.admin.inc:21
 msgid "None"
@@ -29,91 +29,96 @@ msgstr "Geen"
 
 #: culturefeed_mailing.admin.inc:29 culturefeed_mailing.pages.inc:249
 msgid "Mailing list"
-msgstr ""
+msgstr "Mailing list"
 
 #: culturefeed_mailing.admin.inc:36
 msgid "Optional mailing list"
-msgstr ""
+msgstr "Optionele mailing list"
 
 #: culturefeed_mailing.admin.inc:43
 msgid "Newsletter block description"
-msgstr ""
+msgstr "Nieuwsbrief block omschrijving"
 
 #: culturefeed_mailing.admin.inc:44
 msgid "Description displayed in the form as block"
-msgstr ""
+msgstr "Beschrijving word als block weergegeven in het formulier"
 
 #: culturefeed_mailing.admin.inc:50
 msgid "Optional newsletter description"
-msgstr ""
+msgstr "Optionele nieuwsbrief omschrijving"
 
 #: culturefeed_mailing.admin.inc:51
 msgid "Description displayed beside the checkbox for an optional registration"
 msgstr ""
+"Omschrijving die getoond wordt bij de checkbox voor een optionele "
+"inschrijving"
 
 #: culturefeed_mailing.admin.inc:57
 msgid "Subscribed message"
-msgstr ""
+msgstr "Bericht bij inschrijven"
 
 #: culturefeed_mailing.admin.inc:58
 msgid "Message after a successfull subscription"
-msgstr ""
+msgstr "Bericht na succesvol inschrijven"
 
 #: culturefeed_mailing.admin.inc:59
 msgid "Successfully subscribed to our newsletter"
-msgstr ""
+msgstr "U bent succesvol ingeschreven voor onze nieuwsbrief"
 
 #: culturefeed_mailing.blocks.inc:30
 msgid "Newsletter"
-msgstr ""
+msgstr "Nieuwsbrief"
 
 #: culturefeed_mailing.helpers.inc:28
 msgid "subscribed"
-msgstr ""
+msgstr "ingegeschreven"
 
 #: culturefeed_mailing.helpers.inc:28
 msgid "not subscribed"
-msgstr ""
+msgstr "niet ingeschreven"
 
 #: culturefeed_mailing.helpers.inc:31
 msgid "Unsubscribe"
-msgstr ""
+msgstr "Uitschrijven"
 
-#: culturefeed_mailing.helpers.inc:31 culturefeed_mailing.pages.inc:127 culturefeed_mailing.module:240
+#: culturefeed_mailing.helpers.inc:31 culturefeed_mailing.pages.inc:127
+#: culturefeed_mailing.module:240
 msgid "Subscribe"
-msgstr ""
+msgstr "Inschrijven"
 
 #: culturefeed_mailing.pages.inc:48
 msgid "Error occurred"
-msgstr ""
+msgstr "Er is een fout opgetreden"
 
 #: culturefeed_mailing.pages.inc:75
 msgid "Email address)"
-msgstr ""
+msgstr "E-mailadres"
 
 #: culturefeed_mailing.pages.inc:85
 msgid "Zipcode"
-msgstr ""
+msgstr "Postcode"
 
 #: culturefeed_mailing.pages.inc:95
 msgid "First name"
-msgstr ""
+msgstr "Voornaam"
 
 #: culturefeed_mailing.pages.inc:105
 msgid "Family name"
-msgstr ""
+msgstr "Naam"
 
 #: culturefeed_mailing.pages.inc:122
 msgid "Privacy statement"
-msgstr ""
+msgstr "Privacyverklaring"
 
 #: culturefeed_mailing.pages.inc:169
 msgid "An error occurred while subscribing, please try again later."
 msgstr ""
+"Er is een fout opgetreden tijdens het inschrijven. Probeer het later "
+"opnieuw. "
 
 #: culturefeed_mailing.pages.inc:179
 msgid "You have successfully subscribed to our newsletter"
-msgstr ""
+msgstr "U bent succesvol ingeschreven voor onze nieuwsbrief."
 
 #: culturefeed_mailing.pages.inc:198
 msgid "edit"
@@ -121,11 +126,11 @@ msgstr "bewerken"
 
 #: culturefeed_mailing.pages.inc:205
 msgid "detele"
-msgstr ""
+msgstr "verwijder"
 
 #: culturefeed_mailing.pages.inc:212;491
 msgid "send test mail"
-msgstr ""
+msgstr "Stuur testmail"
 
 #: culturefeed_mailing.pages.inc:249;315
 msgid "Subject"
@@ -133,7 +138,7 @@ msgstr "Onderwerp"
 
 #: culturefeed_mailing.pages.inc:249;307
 msgid "From address"
-msgstr ""
+msgstr "Verzendadres"
 
 #: culturefeed_mailing.pages.inc:249
 msgid "Actions"
@@ -141,7 +146,7 @@ msgstr "Acties"
 
 #: culturefeed_mailing.pages.inc:251
 msgid "No mailinglists yet"
-msgstr ""
+msgstr "Er zijn nog geen mailinglists"
 
 #: culturefeed_mailing.pages.inc:267
 msgid "Are you sure you want to delete %title?"
@@ -161,7 +166,7 @@ msgstr "Annuleren"
 
 #: culturefeed_mailing.pages.inc:286
 msgid "Error occurred while deleting the mailing"
-msgstr ""
+msgstr "Er is een fout opgetreden tijdens het verwijderen van de mailing."
 
 #: culturefeed_mailing.pages.inc:299
 msgid "Title"
@@ -169,19 +174,19 @@ msgstr "Titel"
 
 #: culturefeed_mailing.pages.inc:331
 msgid "Frequency"
-msgstr ""
+msgstr "Frequentie"
 
 #: culturefeed_mailing.pages.inc:339
 msgid "Search Query"
-msgstr ""
+msgstr "Zoekopdracht"
 
 #: culturefeed_mailing.pages.inc:347
 msgid "Recommendation Query"
-msgstr ""
+msgstr "Aanbevolen zoekopdracht"
 
 #: culturefeed_mailing.pages.inc:355
 msgid "Template"
-msgstr ""
+msgstr "Template"
 
 #: culturefeed_mailing.pages.inc:363
 msgid "Block 1"
@@ -209,71 +214,71 @@ msgstr ""
 
 #: culturefeed_mailing.pages.inc:410
 msgid "Submit"
-msgstr ""
+msgstr "Indienen"
 
 #: culturefeed_mailing.pages.inc:440
 msgid "Mailing list updated"
-msgstr ""
+msgstr "Aanpassingen aan de mailing list zijn opgeslagen"
 
 #: culturefeed_mailing.pages.inc:444
 msgid "Could not update mailing list"
-msgstr ""
+msgstr "Aanpassingen aan de mailing list konden niet worden opgeslagen. "
 
 #: culturefeed_mailing.pages.inc:467
 msgid "New mailing list created"
-msgstr ""
+msgstr "Maak een nieuwe mailing list aan"
 
 #: culturefeed_mailing.pages.inc:471
 msgid "Could not save new mailing list"
-msgstr ""
+msgstr "Kon de aanpassingen aan de nieuwe mailing list niet opslaan."
 
 #: culturefeed_mailing.pages.inc:503
 msgid "Test mail sent"
-msgstr ""
+msgstr "Test mail is verstuurd."
 
 #: culturefeed_mailing.pages.inc:507
 msgid "Mail could not be sent"
-msgstr ""
+msgstr "Mail kon niet worden verzonden. "
 
 #: culturefeed_mailing.module:15
 msgid "Subscribe to mailings"
-msgstr ""
+msgstr "Schrijf je in "
 
 #: culturefeed_mailing.module:16
 msgid "Allows the user to subscribe to mailings"
-msgstr ""
+msgstr "Sta gebruiker toe zich in te schrijven op een mailing list"
 
 #: culturefeed_mailing.module:39
 msgid "Subscribe to our newsletter"
-msgstr ""
+msgstr "Inschrijven op de nieuwsbrief"
 
 #: culturefeed_mailing.module:47
 msgid "Subscribed to our newsletter"
-msgstr ""
+msgstr "Ingeschreven op de nieuwsbrief"
 
 #: culturefeed_mailing.module:55
 msgid "Emails"
-msgstr ""
+msgstr "E-mails"
 
 #: culturefeed_mailing.module:64 culturefeed_mailing.info:0
 msgid "CultureFeed Mailing"
-msgstr ""
+msgstr "CultureFeed Mailing"
 
 #: culturefeed_mailing.module:65
 msgid "CultureFeed Mailing settings"
-msgstr ""
+msgstr "CultureFeed Mailing instellingen"
 
 #: culturefeed_mailing.module:75
 msgid "Mailing lists"
-msgstr ""
+msgstr "Mailing lists"
 
 #: culturefeed_mailing.module:84;94;112
 msgid "Add mailing list"
-msgstr ""
+msgstr "Voeg mailing list toe"
 
 #: culturefeed_mailing.module:103
 msgid "Test mailing list"
-msgstr ""
+msgstr "Test mailing list"
 
 #: culturefeed_mailing.module:159
 msgid "Culturefeed mailings: Newsletter opt-in"
@@ -285,7 +290,7 @@ msgstr ""
 
 #: culturefeed_mailing.module:201
 msgid "Manage newsletters you can subscribe"
-msgstr ""
+msgstr "Beheer de nieuwsbrieven waarop je kan inschrijven"
 
 #: culturefeed_mailing.module:233
 msgid "Email address"
@@ -294,8 +299,9 @@ msgstr "E-mailadres"
 #: culturefeed_mailing.info:0
 msgid "Creates a tool to subscribe to and construct mailings on CultureFeed"
 msgstr ""
+"Maakt een tool aan waarmee je kan inschrijven op en CultureFeed mailings kan "
+"aanmaken. "
 
 #: culturefeed_mailing.info:0
 msgid "CultureFeed"
-msgstr ""
-
+msgstr "CultureFeed"
